--- a/index.html
+++ b/index.html
@@ -32,7 +32,22 @@
   <title>alrayanexchang</title>
   <link rel="manifest" href="manifest.json">
 </head>
+  
 <body>
-  <script src="flutter_bootstrap.js" async></script>
+  <script>
+    {{flutter_js}} // ignore the errors. Do not add any quotes ("" or '')
+    {{flutter_build_config}} // ignore the errors. Do not add any quotes ("" or '')
+
+    window.addEventListener('load', function () {
+        let loading = document.querySelector('#loading-indicator');
+        _flutter.loader.load({
+            onEntrypointLoaded: async function (engineInitializer) {
+                const appRunner = await engineInitializer.initializeEngine({renderer: 'html'}); // {renderer: 'html'} can be completely removed or replaced by 'canvaskit'
+                await appRunner.runApp();
+                loading.remove(); // Removing the native loading indicator after loading the Flutter app.
+            }
+        });
+    });
+</script>
 </body>
 </html>
