--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
-  <base href="/">
+  <base href="./">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -34,13 +34,21 @@
 </head>
   
 <body>
-  <script src="flutter.js"></script>
-  <script>
-    _flutter.loader.loadEntrypoint().then(function(engineInitializer) {
-      return engineInitializer.initializeEngine().then(function(appRunner) {
-        return appRunner.runApp();
+    <script>
+    window.addEventListener('load', function(ev) {
+      // Download main.dart.js
+      _flutter.loader.loadEntrypoint({
+        serviceWorker: {
+          serviceWorkerVersion: serviceWorkerVersion,
+        },
+        onEntrypointLoaded: function(engineInitializer) {
+          engineInitializer.initializeEngine().then(function(appRunner) {
+            appRunner.runApp();
+          });
+        }
       });
     });
   </script>
+
 </body>
 </html>
