--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
   <title>alrayanexchang</title>
   <link rel="manifest" href="manifest.json">
+  <script src="flutter.js" defer></script>
 </head>
   
 <body>
