--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 </head>
   
 <body>
+  <script src="flutter_bootstrap.js" async></script>
    <script>
   if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
